ability to delete photos template

--- a/app/src/main/res/layout/fragment_settings_edit_info.xml
+++ b/app/src/main/res/layout/fragment_settings_edit_info.xml
@@ -2,17 +2,17 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 01.03.20 17:33
+  ~ Last modified 01.03.20 18:58
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-	android:layout_width="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<androidx.core.widget.NestedScrollView
 		android:layout_width="match_parent"
@@ -28,6 +28,23 @@
 			android:layout_width="match_parent"
 			android:padding="@dimen/general_margin_8"
 			android:animateLayoutChanges="true">
+
+			<androidx.recyclerview.widget.RecyclerView
+				android:id="@+id/rvSettingsEditPhotos"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+
+				android:orientation="horizontal"
+				app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+				app:spanCount="2"
+
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent"
+				app:layout_constraintBottom_toTopOf="@id/layoutSettingsEditName"
+
+				tools:listitem="@layout/fragment_settings_edit_info_photo_item"
+				/>
 
 			<!--name-->
 			<com.google.android.material.textfield.TextInputLayout
@@ -52,7 +69,7 @@
 
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent"
+				app:layout_constraintTop_toBottomOf="@id/rvSettingsEditPhotos"
 				>
 
 				<com.google.android.material.textfield.TextInputEditText
