--- a/app/src/main/res/drawable/ic_clear_24dp.xml
+++ b/app/src/main/res/drawable/ic_clear_24dp.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 01.03.20 18:55
+  ~ Last modified 02.03.20 17:08
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -10,11 +10,12 @@
 
 <vector
     android:height="24dp"
+    android:tint="#FFFFFF"
     android:viewportHeight="24.0"
     android:viewportWidth="24.0"
     android:width="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <path android:fillColor="@color/material_red_a700" android:pathData="M7,11v2h10v-2L7,11zM12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8 8,3.59 8,8 -3.59,8 -8,8z"/>
+    <path android:fillColor="#FF000000" android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z"/>
 
 </vector>
