--- a/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 23.02.20 16:20
+  ~ Last modified 02.03.20 17:34
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -15,4 +15,6 @@
 	<dimen name="auth_tv_slogan2">30sp</dimen>
 	<dimen name="collapseBarHeight">500dp</dimen>
 	<dimen name="rvSettingsPhotoElementWidth">200dp</dimen>
+	<dimen name="rvSettingsEditPhotoElementWidth">200dp</dimen>
+	<dimen name="rvSettingsEditPhotoElementHeight">300dp</dimen>
 </resources>
